# book-shelf-multi

./: .gitignore  ACTIVITY.md  IMPLEMENTATIONS.md  README.md  package-lock.json  package.json
backend/c/: .gitignore  README.md  book.c  book.h  fix-msys2.bat  json.c  json.h  main.c  package.json
backend/cpp/: CMakeLists.txt  README.md  f.md  main.cpp
backend/cpp/cmake/: FindBoost.cmake
backend/csharp/: BookService.cs  Program.cs  README.md  package.json
backend/csharp/Models/: Book.cs  CreateBookDto.cs  UpdateBookDto.cs
backend/elixir/: README.md  mix.exs
backend/elixir/lib/: book_shelf_api.ex
backend/express/: README.md  index.js  package.json
backend/fastapi/: README.md  database.py  main.py  requirements.txt
backend/fsharp/: BookApi.fsproj  Ctl.fs  Program.fs  Program.md  README.md  package.json
backend/go/: README.md  main.go
backend/haskell/: README.md  haskell-book-api.cabal  package.yaml  stack.yaml
backend/haskell/.stack-work/: stack.sqlite3
backend/idris/: README.md  app.ipkg  pack.toml
backend/java/: README.md  package.json  pom.xml
backend/nestjs/: README.md  nest-cli.json  package-lock.json  package.json
backend/nodejs/: README.md  database.js  index.js  package.json
backend/php/: README.md  books.json  index.php  package.json
backend/ruby/: Gemfile  README.md  app.rb  config.ru  package.json  rack_app.rb  simple_server.rb  test.rb
backend/rust/: Cargo.toml  README.md
frontend/: package.json  tsconfig.json
frontend/playwright-report/: index.html
frontend/public/: index.html
frontend/tests/: app.spec.ts
(+27 files in other folders)
